--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Alegreya',sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(204, 198, 185);
     display: grid;
     grid-template-areas:    "header"
@@ -10,14 +10,17 @@ body{
     
 }
 
-#parrafoinicial{
+.frases_puntuales{
     font-size: 20px;
     text-align: center;
+    font-family:  'Alegreya',sans-serif;;
     
 }
 
+
+
 header{
-    font-family: 'Alegreya',sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: grid;
     grid-area: header;
     text-align: center;
@@ -31,7 +34,7 @@ header{
 main{
     display: grid;
     margin: 3%;
-    padding: 5%;
+    padding: 2%;
     grid-template-areas: "contenedor1 contenedor1 contenedor1"
                          "izquierda contenedor2 derecha" ;
     grid-template-columns: 5% 90% 5%;
@@ -50,7 +53,7 @@ ul {
 
 #contenedor1{
     display: flex;
-    padding: 8%;
+    padding: 2%;
     background-color: cornsilk;
     justify-content: center;
     text-align: justify;
