--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,8 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(204, 198, 185);
-    display: grid;
-    grid-template-areas:    "header"
-                            "main";
-    gap: 8px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20% 90%;
+    display: block;
+    
     
 }
 
@@ -21,24 +17,23 @@ body{
 
 header{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: grid;
-    grid-area: header;
+    display: block;
     text-align: center;
     font-size: 50px;
     justify-content: center;
+    
+
     
     
 }
 
 
 main{
-    display: grid;
-    margin: 3%;
-    padding: 2%;
-    grid-template-areas: "contenedor1 contenedor1 contenedor1"
-                         "izquierda contenedor2 derecha" ;
-    grid-template-columns: 5% 90% 5%;
-    grid-template-rows: 30% 70%;
+    display: block
+    
+    padding: 20%;
+    
+    
     
 
             
@@ -52,42 +47,52 @@ ul {
 }
 
 #contenedor1{
-    display: flex;
-    padding: 2%;
+    display: block;
+    padding: 20px;
     background-color: cornsilk;
     justify-content: center;
     text-align: justify;
-    grid-area: contenedor1;
+    
     
 
 }
 
+img{
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+  
+}
+
 #contenedor2{
-    display: grid;
-    
+    display: block;
+    padding: 20px;
+    margin: 20px;
     /*justify-content: center;*/
     text-align: justify;
-    grid-area: contenedor2;
+ 
     
 
 }
 
 #izquierda{
-    display: flex;
+    display: block;
     /*justify-content: left;*/
     padding: 2%;
-    grid-area: izquierda;
+   
   
     
     
 }
 
 #derecha{
-    display: grid;
+    display: block;
     padding: 2%;
     /*justify-content: right;*/
     
-    grid-area: derecha;
+    
     
     
     
