--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(204, 198, 185);
     display: block;
+    width: 70%;
+    padding: 15%;
+    
     
     
 }
@@ -20,7 +23,7 @@ header{
     display: block;
     text-align: center;
     font-size: 50px;
-    justify-content: center;
+    width: auto
     
 
     
